--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Menu</h1>
+    <nav>
+     <a href="articleDetail.html">article Detail</a>
     
 </body>
 </html>
