--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Menu</h1>
     <nav>
      <a href="articleDetail.html">article Detail</a>
+     <a href="comments.html">comments</a>
     
 </body>
 </html>
